garde/tests/ui/compile-fail/if_missing_cond.stderr
error: missing `cond` argument
 --> tests/ui/compile-fail/if_missing_cond.rs
  |
  |     #[garde(if(ascii, length(min = 1)))]
  |                                      ^
